01-container-platform/k8s/kyverno/no-latest-tag-policy.yaml

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-latest-tag-policy 
spec:
  validationFailureAction: Enforce
  rules:
    - name: no-latest-tag-policy 
      match:
        any:
          - resources:
              kinds:
                - Pods
                - Deployment
      validate:
        message: "Must use valid image tag"
        pattern:
            spec:
              containers:
                 - image: "!*:latest"
